hw4/App/Kuber/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: server-pod
      labels:
        app: server
    spec:
      containers:
      - image: apselon/app-server-image
        name: server
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
