hw4/App/Kuber/balancer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-balancer-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: server
  type: LoadBalancer
