hw4/App/Kuber/postgres.yml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim

      containers:
        - image: postgres
          name: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service

metadata:
  name: postgres

spec:
  type: ClusterIP

  ports:
    - port: 5432

  selector:
    app: postgres
